# risc0-compose-hybrid-workshop

./: .gitignore
local-proving-ssid/: Cargo.toml  README.md
local-proving-ssid/core/: Cargo.toml
local-proving-ssid/core/src/: lib.rs
local-proving-ssid/methods/: Cargo.toml
local-proving-ssid/methods/guest/: Cargo.toml
local-proving-ssid/methods/guest/src/: main.rs
local-proving-ssid/src/: main.rs
